--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
+    "npm": "^10.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
